added detail to readme page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
         </div>
     </div>
-    <div class="hero"></div>
+    <div class="hero">
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="computer, notebook, and coffee cup with colorful pens creating a SEO doodle" class="float-left" />
@@ -74,12 +74,13 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+    <!--footer-->
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer
 </body>
 
 </html>
